Fix the alignment of site names opposite their icons

--- a/assets/css/table.scss
+++ b/assets/css/table.scss
@@ -240,7 +240,7 @@
   .logo {
     margin-right: 0.7em;
     height: 2.5em;
-    max-width: 2.5em;
+    width: 2.5em;
     vertical-align: middle;
   }
 }
